# inshelves

./: .dccache  .eslintrc.js  .gitignore  .prettierignore  README.md  app.vue  index.html  jest.config.js  jest.setup.js  nuxt.config.js  package.json  postcss.config.js  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml
.nuxt/: App.js  image.js  index.js  router.js  routes.json
.nuxt/components/: index.js  readme.md
.nuxt/vetur/: tags.json
components/: SideBar.vue  SideBarItem.vue  Sidebar.vue  SidebarItem.vue
main/: background.ts
main/helpers/: create-window.ts  index.ts
pages/: index.vue
plugins/: draggable.ts
renderer/: next.config.js  postcss.config.js  tailwind.config.js  tsconfig.json
renderer/components/: GridLibrary.tsx  Library.tsx  UI.tsx
renderer/components/Grid/: GridItem.tsx  GridLibrary.tsx  index.ts
renderer/components/GridLibrary/: GridItem.tsx  GridLibrary.tsx  index.ts
renderer/components/UI/: LoginForm.tsx  SideBar.tsx  SideBarItem.tsx  TitleBar.tsx  UI.tsx  index.ts
renderer/components/ui/: SideBar.tsx  TitleBar.tsx
renderer/pages/: 404.tsx  _app.tsx  account.tsx  grid.tsx  home.tsx  titlebar.tsx
renderer/pages/account/: login.tsx  register.tsx
renderer/pages/game/: [id].tsx
renderer/styles/: globals.css
renderer/utils/: Game.tsx
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Sidebar.vue  SidebarItem.vue
test/: SideBar.spec.js  constants.js  nuxtjs-pages.test.js
