[package]
name = "app"
version = "0.1.0"
description = "Library for all your games, cross-platform."
authors = [ "AirOne01" ]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.12", features = [ ] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tao = "0.10.0"
tauri = { version = "1.0.0", features = [ "api-all" ] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
